# dendra

./: .gitignore  LICENSE  README.md  pyproject.toml
dendra/: __init__.py  cli.py  color.py  renderer.py  wave_renderer.py
dendra/math/: fourier.py  fractal.py  lsystem.py  wave.py
dendra/species/: __init__.py  base.py  cedar.py  dogwood.py  pawpaw.py  persimmon.py  pine.py  redbud.py  sycamore.py  white_oak.py
